Overflow issue with drop down.

--- a/css/base.css
+++ b/css/base.css
@@ -754,7 +754,6 @@ ul.industries {
 #one-column {
 	clear: both;
 	margin: 0 auto;
-	overflow: auto;
 	width: 985px;
 }
 #one-column-wide {
